# babel_player

./: Cargo.toml  LICENSE  README.md
src/: app.rs  init.rs  lib.rs  lyrics.rs  lyrics_editor.rs  main.rs
